# cpp-karl.m.17-19-project

./: CMakeLists.txt
include/: zipfs.h
src/: CMakeLists.txt  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp
tests/: CMakeLists.txt  test_zipfs.cpp
